# Lamplighter

./: .clang-format  CMakeLists.txt  README.md
assets/fonts/atlases/black/: fs40.fnt
assets/fonts/atlases/red/: fs30.fnt
assets/fonts/atlases/red_shadow/: fs20.fnt
assets/fonts/atlases/white_shadow/: fs10.fnt
assets/prefabs/abilities/: bullet.json  counter_attack.json  fire.json  fire_ball.json  resolve.json  sword_slash.json
assets/prefabs/items/: apple.json  bat_wing.json  cash.json  coin.json  fur_pelt.json  iron_armor.json  iron_helmet.json  iron_sword.json  mushroom.json  slime_jelly.json  stump.json
assets/prefabs/maps/: map.json  map2.json
assets/prefabs/statuseffects/: resolve.json
assets/prefabs/treasurechests/: treasure_chest_small.json
assets/prefabs/units/: enemy.json  unit.json
include/: ability.h  ability_targets.h  ai_walk_path.h  assets.h  backward.h  battle.h  camera.h  constants.h  dialogue.h  editor.h  engine.h  fixed_sprite.h  game.h  game_events.h  input_events.h  inventory.h  item.h  map.h  network.h  pathfinder.h  pool.h  robin_hood.h  serializer.h  sprite.h  spritesheet.h  status_effect.h  text.h  tile.h  treasure_chest.h  tween.h  tweenable_sprite.h  unit.h  unit_sprite.h  utils.h  utils_game.h
include/ui/: action_point_display.h  alert.h  battle_text.h  bottom_navbar.h  crosshairs.h  dialogue_box.h  equip_window.h  expandable_sprite.h  inventory_window.h  item_pickup_list.h  move_point_icons.h  portraits.h  shop_window.h  skill_tree_window.h  tooltip.h  turn_order_display.h  ui.h  ui_sprite.h  unit_ui.h  utils_ui.h
src/: client.cpp  main.cpp  run.cpp  server.cpp
src/general/: ability.cpp  ability_targets.cpp  ai_walk_path.cpp  assets.cpp  backward.cpp  battle.cpp  camera.cpp  editor.cpp  engine.cpp  fixed_sprite.cpp  game.cpp  game_events.cpp  input_events.cpp  inventory.cpp  item.cpp  map.cpp  network.cpp  pathfinder.cpp  serializer.cpp  sprite.cpp  spritesheet.cpp  status_effect.cpp  text.cpp  tile.cpp  treasure_chest.cpp  tween.cpp  tweenable_sprite.cpp  unit.cpp  unit_sprite.cpp  utils.cpp  utils_game.cpp
src/general/ui/: action_point_display.cpp  alert.cpp  battle_text.cpp  bottom_navbar.cpp  crosshairs.cpp  dialogue_box.cpp  equip_window.cpp  expandable_sprite.cpp  inventory_window.cpp  item_pickup_list.cpp  move_point_icons.cpp  portraits.cpp  shop_window.cpp  skill_tree_window.cpp  tooltip.cpp  turn_order_display.cpp  ui.cpp  ui_sprite.cpp  unit_ui.cpp  utils_ui.cpp
